# decoyauth

./: README.md
c-prototype/: .gitignore  CMakeLists.txt  README.md  build.sh  encoded_points.txt  hashes.txt  points.txt
c-prototype/bench/: CMakeLists.txt  main.cpp
c-prototype/src/: CMakeLists.txt  encode.c  encode.h  generate.sh  main.c  util.c  util.h  weaver.c  weaver.h
c-prototype/tst/: CMakeLists.txt  combined_tst.cpp  encode_tst.cpp  weave_tst.cpp
c-prototype/values/: vals_10.txt  vals_100.txt  vals_1000.txt  vals_101.txt  vals_102.txt  vals_103.txt  vals_104.txt  vals_105.txt  vals_106.txt  vals_107.txt  vals_108.txt  vals_109.txt  vals_11.txt  vals_110.txt  vals_111.txt  vals_112.txt  vals_113.txt  vals_114.txt  vals_115.txt  vals_116.txt  vals_117.txt  vals_118.txt  vals_119.txt  vals_12.txt  vals_120.txt  vals_121.txt  vals_122.txt  vals_123.txt  vals_124.txt  vals_125.txt  vals_126.txt  vals_127.txt  vals_128.txt  vals_129.txt  vals_13.txt  vals_130.txt  vals_131.txt  vals_132.txt  vals_133.txt  vals_134.txt  (+160 more)
hostap/: README.md  example.pcapng
hostap/hostapd/: decoyauth-ap.conf  defconfig
hostap/src/ap/: ieee802_11.c
hostap/src/common/: Makefile  encode.c  encode.h  main.c  sae.c  sae.h  weaver.c  weaver.h
hostap/src/crypto/: crypto.h  crypto_openssl.c
hostap/wpa_supplicant/: Makefile  decoyauth-client.conf  sme.c  wpa_supplicant_i.h
scripts/: README.md  TESTS.md  curves.py  decoyauth.py  elligator.py  encode.py  interpolate.py  multipw.py  requirements.txt  test_decoyauth.py  util.py  weaver.py
